5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1674_1107.log
== TEST (2019-04-30 12:39:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(d==1):
			y = "segunda"
		elif(d==2 ):
			y = "terca"			
		elif(d== 3):
			y = "quarta"	
		elif(d== 4):
			y = "quinta"
		elif(d== 5):
			y = "sexta"
		elif(d== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", f)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:39:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(d==1):
			y = "segunda"
		elif(d==2 ):
			y = "terca"			
		elif(d== 3):
			y = "quarta"	
		elif(d== 4):
			y = "quinta"
		elif(d== 5):
			y = "sexta"
		elif(d== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", r)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", r)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:42:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(d==1):
			y = "segunda"
		elif(d==2 ):
			y = "terca"			
		elif(d== 3):
			y = "quarta"	
		elif(d== 4):
			y = "quinta"
		elif(d== 5):
			y = "sexta"
		elif(d== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:44:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:44:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:44:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:44:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- EXECUTION TIME:
0.183166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:45:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:45:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:46:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) %7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
		if(f==0):
			y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", f)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:50:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
		elif(f==1):
			y = "segunda"
		elif(f==2 ):
			y = "terca"			
		elif(f== 3):
			y = "quarta"	
		elif(f== 4):
			y = "quinta"
		elif(f== 5):
			y = "sexta"
		elif(f== 6):
			y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", f)



-- ERROR:
File "XXXX", line 27
    elif(f==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:50:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", f)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:50:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", r)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", r)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:51:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:52:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:53:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
else:
	print("A entrada",f ,"eh invalida")

print("Hoje eh", d, "e o dia futuro eh", f)



-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:53:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
	print("A entrada",f ,"eh invalida")
	print("Hoje eh", d, "e o dia futuro eh", f)
else:
	print("A entrada",f ,"eh invalida")





-- ERROR:
File "XXXX", line 40
    print("A entrada",f ,"eh invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:53:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
		print("Hoje eh", d, "e o dia futuro eh", f)
else:
	print("A entrada",f ,"eh invalida")





-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:54:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
		print("Hoje eh", x, "e o dia futuro eh", y)
else:
	print("A entrada",f ,"eh invalida")





-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:56:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
		print("Hoje eh", x, "e o dia futuro eh", y)
else:
	print("A entrada",f ,"eh invalida")





-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:56:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
		print("Hoje eh", x, "e o dia futuro eh", y)
else:
	print("A entrada",f ,"eh invalida")





-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:56:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d >= 0 and d <= 6):
	if (f >= 0):
		if (d == 0):
			x= "domingo"
		elif(d==1):
			x = "segunda"
		elif(d==2):
			x = "terca"
		elif(d==3):
			x = "quarta"
		elif(d==4):
			x="quinta"
		elif(d==5):
			x = "sexta"
		elif(d==6):
			x = "sabado"
	if(f==0):
		y = "domingo"
	elif(f==1):
		y = "segunda"
	elif(f==2 ):
		y = "terca"			
	elif(f== 3):
		y = "quarta"	
	elif(f== 4):
		y = "quinta"
	elif(f== 5):
		y = "sexta"
	elif(f== 6):
		y = "sabado"
	else:
		print("A entrada",f ,"eh invalida")
		print("Hoje eh", x, "e o dia futuro eh", y)
else:
	print("A entrada",f ,"eh invalida")





-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:43:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if ((d>=7 or d <=0) or (f<=0 or f>=7)):
	print ("A entrada ", d,"eh invalida" )


-- OUTPUT:
A entrada  9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:43:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d>=7 or d <=0):
	print ("A entrada", d,"eh invalida" )


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:43:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Valor do dia: "))
f = int(input("Dia futuro apos hoje: "))

r = (d+f) % 7

if (d>=7 or d <=0):
	print ("A entrada", d,"eh invalida" )


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:53:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Entre com o numero do dia de hoje: "))
f = int(input("Entre com o numero de dias apos hoje: "))

r = (d+f) % 7

if (d>=7 or d <=0):
	print ("A entrada", d,"eh invalida" )
else:
	if (d==0):
		x = "domingo"
	if (d==1):
		x ="segunda"
	if (d==2):
		x ="terca"
	if (d==3):
		x ="quarta"
	if (d==4):
		x ="quinta"
	if (d==5):
		x ="sexta"
	if (d==6):
		x ="sabado"
	if (r==0):
		y ="domingo"
	if (r==1):
		y ="segunda"
	if (r==2):
		y ="terca"
	if (r==3):
		y ="quarta"
	if (r==4):
		y ="quinta"
	if (r==5):
		y ="sexta"
	if (r==6):
		y ="sabado"
	
	print("Hoje eh", x, "e o dia futuro eh segunda",y)	
		

		
		
		
		
		
		
		
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:54:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Entre com o numero do dia de hoje: "))
f = int(input("Entre com o numero de dias apos hoje: "))

r = (d+f) % 7

if (d>=7 or d <=0):
	print ("A entrada", d,"eh invalida" )
else:
	if (d==0):
		x = "domingo"
	if (d==1):
		x ="segunda"
	if (d==2):
		x ="terca"
	if (d==3):
		x ="quarta"
	if (d==4):
		x ="quinta"
	if (d==5):
		x ="sexta"
	if (d==6):
		x ="sabado"
	if (r==0):
		y ="domingo"
	if (r==1):
		y ="segunda"
	if (r==2):
		y ="terca"
	if (r==3):
		y ="quarta"
	if (r==4):
		y ="quinta"
	if (r==5):
		y ="sexta"
	if (r==6):
		y ="sabado"
	
	print("Hoje eh", x, "e o dia futuro eh",y)	
		

		
		
		
		
		
		
		
		
		


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:54:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("Entre com o numero do dia de hoje: "))
f = int(input("Entre com o numero de dias apos hoje: "))

r = (d+f) % 7

if (d>=7 or d <=0):
	print ("A entrada", d,"eh invalida" )
else:
	if (d==0):
		x = "domingo"
	if (d==1):
		x ="segunda"
	if (d==2):
		x ="terca"
	if (d==3):
		x ="quarta"
	if (d==4):
		x ="quinta"
	if (d==5):
		x ="sexta"
	if (d==6):
		x ="sabado"
	if (r==0):
		y ="domingo"
	if (r==1):
		y ="segunda"
	if (r==2):
		y ="terca"
	if (r==3):
		y ="quarta"
	if (r==4):
		y ="quinta"
	if (r==5):
		y ="sexta"
	if (r==6):
		y ="sabado"
	
	print("Hoje eh", x, "e o dia futuro eh",y)	
		

		
		
		
		
		
		
		
		
		


-- EXECUTION TIME:
0.20302
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
